--- a/app/src/main/res/layout-land/activity_multi_touch_game_screen.xml
+++ b/app/src/main/res/layout-land/activity_multi_touch_game_screen.xml
@@ -11,15 +11,26 @@
         android:id="@+id/view_info_pressure_ID"
         android:layout_width="38dp"
         android:layout_height="16dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
         android:background="@drawable/rounded_corners_infoview"
         android:gravity="center"
         android:text="int"
         android:textSize="9sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
-        app:layout_constraintEnd_toEndOf="@+id/view_info_pressure_ID3"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/view_info_pressure_ID3"
-        app:layout_constraintTop_toTopOf="@+id/textView4" />
+        app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintTop_toTopOf="@+id/textView4"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <FrameLayout
+        android:id="@+id/touchFrame_ID"
+        android:layout_width="683dp"
+        android:layout_height="337dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+    </FrameLayout>
 
     <TextView
         android:id="@+id/view_info_pressure_ID3"
@@ -39,86 +50,74 @@
         android:id="@+id/view_info_pressure_ID2"
         android:layout_width="38dp"
         android:layout_height="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:background="@drawable/rounded_corners_infoview"
         android:gravity="center"
         android:text="int"
         android:textSize="9sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
-        app:layout_constraintEnd_toEndOf="@+id/view_info_pressure_ID"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/view_info_pressure_ID"
-        app:layout_constraintTop_toTopOf="@+id/textView2" />
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintTop_toTopOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView2"
 
-        android:layout_width="75dp"
+        android:layout_width="76dp"
         android:layout_height="18dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
         android:gravity="center|start"
         android:text="@string/touchpoints"
         android:textColor="@color/multitouch_yellow"
         android:textColorLink="#F9A825"
         android:textSize="10sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
-        app:layout_constraintEnd_toEndOf="@+id/textView4"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textView4" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="75dp"
+        android:layout_width="76dp"
         android:layout_height="18dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
         android:gravity="center|start"
         android:text="@string/currentposition"
         android:textColor="@color/multitouch_yellow"
         android:textSize="10sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView5"
-        app:layout_constraintEnd_toEndOf="@+id/textView5"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textView5" />
+        app:layout_constraintBottom_toBottomOf="@+id/view_info_pressure_ID2"
+        app:layout_constraintStart_toEndOf="@+id/view_info_pressure_ID2"
+        app:layout_constraintTop_toTopOf="@+id/view_info_pressure_ID2"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="76dp"
         android:layout_height="18dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginBottom="48dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
         android:gravity="center|start"
         android:text="@string/currentpressure"
         android:textColor="@color/multitouch_yellow"
         android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/view_info_pressure_ID"
+        app:layout_constraintStart_toEndOf="@+id/view_info_pressure_ID"
+        app:layout_constraintTop_toTopOf="@+id/view_info_pressure_ID"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/font"
-        android:layout_width="101dp"
-        android:layout_height="42dp"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.02"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498" />
-
-    <FrameLayout
-        android:id="@+id/touchFrame_ID"
-        android:layout_width="683dp"
-        android:layout_height="385dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
-        android:layout_marginBottom="1dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
-
-    </FrameLayout>
+        android:id="@+id/button"
+        android:layout_width="134dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginLeft="40dp"
+        android:text="@string/clearscreen"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@+id/view_info_pressure_ID3"
+        app:layout_constraintStart_toEndOf="@+id/view_info_pressure_ID3"
+        app:layout_constraintTop_toTopOf="@+id/view_info_pressure_ID3"
+        app:layout_constraintVertical_bias="0.526" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
