--- a/app/src/main/res/layout-land/activity_multi_touch_game_screen.xml
+++ b/app/src/main/res/layout-land/activity_multi_touch_game_screen.xml
@@ -7,10 +7,23 @@
     android:background="#323030"
     tools:context=".MultiTouchGameScreen">
 
+    <com.example.multitouch.views.CustomCircleView
+        android:id="@+id/touchFrame_ID"
+        android:layout_width="655dp"
+        android:layout_height="306dp"
+        android:layout_marginTop="16dp"
+        android:background="#392626"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.428"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view_info_touchposition_ID"
+        app:layout_constraintVertical_bias="0.096" />
+
     <TextView
-        android:id="@+id/view_info_pressure_ID"
-        android:layout_width="38dp"
-        android:layout_height="16dp"
+        android:id="@+id/view_info_touchposition_ID"
+        android:layout_width="72dp"
+        android:layout_height="19dp"
         android:layout_marginStart="12dp"
         android:layout_marginLeft="12dp"
         android:background="@drawable/rounded_corners_infoview"
@@ -22,18 +35,8 @@
         app:layout_constraintTop_toTopOf="@+id/textView4"
         app:layout_constraintVertical_bias="1.0" />
 
-    <FrameLayout
-        android:id="@+id/touchFrame_ID"
-        android:layout_width="683dp"
-        android:layout_height="337dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-    </FrameLayout>
-
     <TextView
-        android:id="@+id/view_info_pressure_ID3"
+        android:id="@+id/view_info_pressure_ID"
         android:layout_width="38dp"
         android:layout_height="16dp"
         android:layout_marginStart="16dp"
@@ -47,7 +50,7 @@
         app:layout_constraintTop_toTopOf="@+id/textView5" />
 
     <TextView
-        android:id="@+id/view_info_pressure_ID2"
+        android:id="@+id/view_touchpoints_ID"
         android:layout_width="38dp"
         android:layout_height="16dp"
         android:layout_marginStart="16dp"
@@ -66,8 +69,8 @@
 
         android:layout_width="76dp"
         android:layout_height="18dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="16dp"
         android:gravity="center|start"
         android:text="@string/touchpoints"
@@ -81,43 +84,49 @@
         android:id="@+id/textView4"
         android:layout_width="76dp"
         android:layout_height="18dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:gravity="center|start"
         android:text="@string/currentposition"
         android:textColor="@color/multitouch_yellow"
         android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="@+id/view_info_pressure_ID2"
-        app:layout_constraintStart_toEndOf="@+id/view_info_pressure_ID2"
-        app:layout_constraintTop_toTopOf="@+id/view_info_pressure_ID2"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintBottom_toBottomOf="@+id/view_touchpoints_ID"
+        app:layout_constraintStart_toEndOf="@+id/view_touchpoints_ID"
+        app:layout_constraintTop_toTopOf="@+id/view_touchpoints_ID"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="76dp"
         android:layout_height="18dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:gravity="center|start"
         android:text="@string/currentpressure"
         android:textColor="@color/multitouch_yellow"
         android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="@+id/view_info_pressure_ID"
-        app:layout_constraintStart_toEndOf="@+id/view_info_pressure_ID"
-        app:layout_constraintTop_toTopOf="@+id/view_info_pressure_ID"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintBottom_toBottomOf="@+id/view_info_touchposition_ID"
+        app:layout_constraintStart_toEndOf="@+id/view_info_touchposition_ID"
+        app:layout_constraintTop_toTopOf="@+id/view_info_touchposition_ID"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="134dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
+        android:id="@+id/clearScreenButton_ID"
+        android:layout_width="127dp"
+        android:layout_height="28dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginLeft="28dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/rounded_corners_infoview"
         android:text="@string/clearscreen"
         android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@+id/view_info_pressure_ID3"
-        app:layout_constraintStart_toEndOf="@+id/view_info_pressure_ID3"
-        app:layout_constraintTop_toTopOf="@+id/view_info_pressure_ID3"
-        app:layout_constraintVertical_bias="0.526" />
+        app:layout_constraintBottom_toBottomOf="@+id/view_info_pressure_ID"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/view_info_pressure_ID"
+        app:layout_constraintTop_toTopOf="@+id/view_info_pressure_ID"
+        app:layout_constraintVertical_bias="0.166" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
