--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,64 +10,65 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="247dp"
-        android:layout_height="73dp"
+        android:layout_width="203dp"
+        android:layout_height="58dp"
         android:text="@string/multitouchgame"
         android:textAppearance="@style/TextAppearance.AppCompat.Display2"
         android:textColor="@color/multitouch_yellow"
         android:textColorLink="#754343"
-        android:textSize="60sp"
+        android:textSize="50dp"
         app:fontFamily="@font/akronim"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.206"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.359"
+        app:layout_constraintVertical_bias="0.372"
         tools:text="@string/multitouchgame" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="97dp"
-        android:layout_height="70dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.898"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.359"
+        android:layout_width="79dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView"
+        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintTop_toTopOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/multitouch_threecircles_icon" />
 
     <ImageButton
         android:id="@+id/playButton_ID"
         android:layout_width="101dp"
         android:layout_height="70dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="68dp"
         android:background="#323030"
         android:tint="@color/multitouch_red"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.238"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.595"
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/play_button_icon" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="155dp"
         android:layout_height="78dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
         android:text="@string/playgame"
         android:textAppearance="@style/TextAppearance.AppCompat.Display2"
         android:textColor="@color/multitouch_yellow"
         android:textColorLink="#754343"
         android:textSize="60sp"
         app:fontFamily="@font/akronim"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.769"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.602"
+        app:layout_constraintBottom_toBottomOf="@+id/playButton_ID"
+        app:layout_constraintStart_toEndOf="@+id/playButton_ID"
+        app:layout_constraintTop_toTopOf="@+id/playButton_ID"
+        app:layout_constraintVertical_bias="1.0"
         tools:text="@string/playgame" />
 
     <androidx.constraintlayout.widget.Guideline
