--- a/app/src/main/res/layout/activity_multi_touch_game_screen.xml
+++ b/app/src/main/res/layout/activity_multi_touch_game_screen.xml
@@ -7,22 +7,78 @@
     android:background="#323030"
     tools:context=".MultiTouchGameScreen">
 
+    <com.example.multitouch.views.CustomCircleView
+        android:id="@+id/touchFrame_ID"
+        android:layout_width="340dp"
+        android:layout_height="517dp"
+        android:background="#392626"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view_info_pressure_ID"
+        app:layout_constraintVertical_bias="0.619" />
+
+    <Button
+        android:id="@+id/clearScreenButton_ID"
+        android:layout_width="119dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:text="@string/clearscreen"
+        android:background="@drawable/rounded_corners_infoview"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@+id/view_info_touchposition_ID"
+        app:layout_constraintStart_toEndOf="@+id/view_info_touchposition_ID"
+        app:layout_constraintTop_toTopOf="@+id/view_info_touchposition_ID" />
+
     <TextView
-        android:id="@+id/view_info_pressure_ID"
-        android:layout_width="38dp"
+        android:id="@+id/textView4"
+        android:layout_width="75dp"
+        android:layout_height="18dp"
+        android:layout_marginTop="8dp"
+        android:gravity="center|start"
+        android:text="@string/currentposition"
+        android:textColor="@color/multitouch_yellow"
+        android:textSize="10sp"
+        app:layout_constraintEnd_toEndOf="@+id/textView2"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/textView2"
+
+        android:layout_width="75dp"
+        android:layout_height="18dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginLeft="28dp"
+        android:layout_marginTop="16dp"
+        android:gravity="center|start"
+        android:text="@string/touchpoints"
+        android:textColor="@color/multitouch_yellow"
+        android:textColorLink="#F9A825"
+        android:textSize="10sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/view_info_touchposition_ID"
+        android:layout_width="61dp"
         android:layout_height="16dp"
         android:background="@drawable/rounded_corners_infoview"
         android:gravity="center"
         android:text="int"
         android:textSize="9sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
-        app:layout_constraintEnd_toEndOf="@+id/view_info_pressure_ID3"
+        app:layout_constraintEnd_toEndOf="@+id/view_info_pressure_ID"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/view_info_pressure_ID3"
-        app:layout_constraintTop_toTopOf="@+id/textView4" />
+        app:layout_constraintStart_toStartOf="@+id/view_info_pressure_ID"
+        app:layout_constraintTop_toTopOf="@+id/textView4"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/view_info_pressure_ID3"
+        android:id="@+id/view_info_pressure_ID"
         android:layout_width="38dp"
         android:layout_height="16dp"
         android:layout_marginStart="16dp"
@@ -33,10 +89,11 @@
         android:textSize="9sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
         app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toTopOf="@+id/textView5" />
+        app:layout_constraintTop_toTopOf="@+id/textView5"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/view_info_pressure_ID2"
+        android:id="@+id/view_touchpoints_ID"
         android:layout_width="38dp"
         android:layout_height="16dp"
         android:background="@drawable/rounded_corners_infoview"
@@ -44,81 +101,24 @@
         android:text="int"
         android:textSize="9sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
-        app:layout_constraintEnd_toEndOf="@+id/view_info_pressure_ID"
+        app:layout_constraintEnd_toEndOf="@+id/view_info_touchposition_ID"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/view_info_pressure_ID"
-        app:layout_constraintTop_toTopOf="@+id/textView2" />
-
-    <TextView
-        android:id="@+id/textView2"
-
-        android:layout_width="75dp"
-        android:layout_height="18dp"
-        android:layout_marginBottom="8dp"
-        android:gravity="center|start"
-        android:text="@string/touchpoints"
-        android:textColor="@color/multitouch_yellow"
-        android:textColorLink="#F9A825"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
-        app:layout_constraintEnd_toEndOf="@+id/textView4"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textView4" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="75dp"
-        android:layout_height="18dp"
-        android:layout_marginBottom="8dp"
-        android:gravity="center|start"
-        android:text="@string/currentposition"
-        android:textColor="@color/multitouch_yellow"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView5"
-        app:layout_constraintEnd_toEndOf="@+id/textView5"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textView5" />
+        app:layout_constraintStart_toStartOf="@+id/view_info_touchposition_ID"
+        app:layout_constraintTop_toTopOf="@+id/textView2"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="76dp"
-        android:layout_height="18dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginBottom="48dp"
+        android:layout_width="95dp"
+        android:layout_height="19dp"
+        android:layout_marginTop="8dp"
         android:gravity="center|start"
         android:text="@string/currentpressure"
         android:textColor="@color/multitouch_yellow"
         android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/font"
-        android:layout_width="101dp"
-        android:layout_height="42dp"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.02"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498" />
-
-    <FrameLayout
-        android:id="@+id/touchFrame_ID"
-        android:layout_width="683dp"
-        android:layout_height="385dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
-        android:layout_marginBottom="1dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
-
-    </FrameLayout>
+        app:layout_constraintEnd_toEndOf="@+id/textView4"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
